fix: enable one finger scroll on mobile

--- a/map.css
+++ b/map.css
@@ -7,4 +7,9 @@
 	display: none;
 }
 
+.leaflet-container.leaflet-touch-zoom {
+	-ms-touch-action: pan-x pan-y;
+	touch-action: pan-x pan-y;
+}
+
 
